--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(school_db_grader C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_library(checkpoint-noammirjani main.c)
+add_library(checkpoint-noammirjani main.c crypt.c)
